# simple_message_queue

./: .clang-format  .gitignore  CMakeLists.txt  build.sh
src/: Message.hpp  MessageQueue.cpp  MessageQueue.hpp
tests/: Helper.hpp  MessageQueueTests.cpp  MessageTest.cpp
